@@ -43,7 +43,6 @@ import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.QueryParam;
 import jakarta.ws.rs.core.MediaType;
 
-import java.util.Collections;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
@@ -60,29 +59,6 @@ import org.osgi.service.component.annotations.Reference;
 @Path("/{groupId}/individual_segment")
 @Produces(MediaType.APPLICATION_JSON)
 public class IndividualSegmentController extends BaseFaroController {
-
-	@Path("/{id}/memberships")
-	@PUT
-	@RolesAllowed(RoleConstants.SITE_MEMBER)
-	public IndividualSegmentDisplay addMemberships(
-			@PathParam("groupId") long groupId, @PathParam("id") String id,
-			@FormParam("individualIds") FaroParam<List<String>>
-				individualIdsFaroParam)
-		throws Exception {
-
-		FaroProject faroProject =
-			faroProjectLocalService.getFaroProjectByGroupId(groupId);
-
-		IndividualSegment individualSegment =
-			contactsEngineClient.getIndividualSegment(faroProject, id, false);
-
-		validateUpdateMemberships(individualSegment);
-
-		contactsEngineClient.addMemberships(
-			faroProject, id, individualIdsFaroParam.getValue());
-
-		return new IndividualSegmentDisplay(individualSegment);
-	}
 
 	@Path("/{id}/channel/{channelId}")
 	@PUT
@@ -123,16 +99,9 @@ public class IndividualSegmentController extends BaseFaroController {
 
 		validateCreate(channelId, segmentType);
 
-		if (segmentType.equals(IndividualSegment.Type.DYNAMIC.name())) {
-			return createDynamic(
-				channelId, groupId, filter, includeAnonymousUsers, name);
-		}
-		else if (segmentType.equals(IndividualSegment.Type.STATIC.name())) {
-			return createStatic(
-				channelId, groupId, individualIdsFaroParam.getValue(), name);
-		}
-
-		return null;
+		return createIndividualSegment(
+			channelId, groupId, filter, includeAnonymousUsers, name,
+			segmentType);
 	}
 
 	@DELETE
@@ -147,31 +116,6 @@ public class IndividualSegmentController extends BaseFaroController {
 
 		_preferencesController.removeIndividualSegmentPreferences(
 			groupId, id, FaroPreferencesConstants.SCOPE_GROUP);
-	}
-
-	@DELETE
-	@Path("/{id}/memberships")
-	@RolesAllowed(RoleConstants.SITE_MEMBER)
-	public IndividualSegmentDisplay deleteMemberships(
-			@PathParam("groupId") long groupId, @PathParam("id") String id,
-			@FormParam("individualIds") FaroParam<List<String>>
-				individualIdsFaroParam)
-		throws Exception {
-
-		FaroProject faroProject =
-			faroProjectLocalService.getFaroProjectByGroupId(groupId);
-
-		IndividualSegment individualSegment =
-			contactsEngineClient.getIndividualSegment(faroProject, id, false);
-
-		validateUpdateMemberships(individualSegment);
-
-		for (String individualId : individualIdsFaroParam.getValue()) {
-			contactsEngineClient.deleteMembership(
-				faroProject, id, individualId);
-		}
-
-		return new IndividualSegmentDisplay(individualSegment);
 	}
 
 	@GET
@@ -323,7 +267,8 @@ public class IndividualSegmentController extends BaseFaroController {
 			@QueryParam("contactsEntityType") int contactsEntityType,
 			@QueryParam("dataSourceId") String dataSourceId,
 			@QueryParam("query") String query,
-			@QueryParam("segmentType") String segmentType,
+			@DefaultValue(StringPool.BLANK) @QueryParam("segmentTypes")
+				FaroParam<List<String>> segmentTypesFaroParam,
 			@QueryParam("state") String state, @QueryParam("cur") int cur,
 			@QueryParam("delta") int delta,
 			@DefaultValue(StringPool.BLANK) @QueryParam("orderByFields")
@@ -332,31 +277,8 @@ public class IndividualSegmentController extends BaseFaroController {
 
 		return search(
 			groupId, channelId, contactsEntityId, contactsEntityType,
-			dataSourceId, query, segmentType, state, cur, delta,
-			orderByFieldsFaroParam.getValue());
-	}
-
-	@Path("/search")
-	@POST
-	@RolesAllowed(RoleConstants.SITE_MEMBER)
-	public FaroResultsDisplay searchByForm(
-			@PathParam("groupId") long groupId,
-			@FormParam("channelId") String channelId,
-			@FormParam("contactsEntityId") String contactsEntityId,
-			@FormParam("contactsEntityType") int contactsEntityType,
-			@FormParam("dataSourceId") String dataSourceId,
-			@FormParam("query") String query,
-			@FormParam("segmentType") String segmentType,
-			@FormParam("state") String state, @FormParam("cur") int cur,
-			@FormParam("delta") int delta,
-			@DefaultValue(StringPool.BLANK) @FormParam("orderByFields")
-				FaroParam<List<OrderByField>> orderByFieldsFaroParam)
-		throws Exception {
-
-		return search(
-			groupId, channelId, contactsEntityId, contactsEntityType,
-			dataSourceId, query, state, segmentType, cur, delta,
-			orderByFieldsFaroParam.getValue());
+			dataSourceId, query, segmentTypesFaroParam.getValue(), state, cur,
+			delta, orderByFieldsFaroParam.getValue());
 	}
 
 	@Path("/{id}")
@@ -379,25 +301,13 @@ public class IndividualSegmentController extends BaseFaroController {
 
 		validateUpdate(individualSegment);
 
-		String segmentType = individualSegment.getSegmentType();
-
-		if (segmentType.equals(IndividualSegment.Type.DYNAMIC.name())) {
-			return updateDynamic(
-				groupId, individualSegment, filter, includeAnonymousUsers,
-				name);
-		}
-		else if (segmentType.equals(IndividualSegment.Type.STATIC.name())) {
-			return updateStatic(
-				groupId, individualSegment, individualIdsFaroParam.getValue(),
-				name);
-		}
-
-		return new IndividualSegmentDisplay(individualSegment);
+		return updateIndividualSegment(
+			groupId, individualSegment, filter, includeAnonymousUsers, name);
 	}
 
-	protected IndividualSegmentDisplay createDynamic(
+	protected IndividualSegmentDisplay createIndividualSegment(
 			String channelId, long groupId, String filter,
-			boolean includeAnonymousUsers, String name)
+			boolean includeAnonymousUsers, String name, String segmentType)
 		throws Exception {
 
 		FaroProject faroProject =
@@ -406,35 +316,14 @@ public class IndividualSegmentController extends BaseFaroController {
 		return new IndividualSegmentDisplay(
 			contactsEngineClient.addIndividualSegment(
 				faroProject, getUserId(), channelId, filter,
-				includeAnonymousUsers, name,
-				IndividualSegment.Type.DYNAMIC.name(),
+				includeAnonymousUsers, name, segmentType,
 				IndividualSegment.Status.ACTIVE.name()));
-	}
-
-	protected IndividualSegmentDisplay createStatic(
-			String channelId, long groupId, List<String> individualIds,
-			String name)
-		throws Exception {
-
-		FaroProject faroProject =
-			faroProjectLocalService.getFaroProjectByGroupId(groupId);
-
-		IndividualSegment individualSegment =
-			contactsEngineClient.addIndividualSegment(
-				faroProject, getUserId(), channelId, null, false, name,
-				IndividualSegment.Type.STATIC.name(),
-				IndividualSegment.Status.ACTIVE.name());
-
-		contactsEngineClient.addMemberships(
-			faroProject, individualSegment.getId(), individualIds);
-
-		return new IndividualSegmentDisplay(individualSegment);
 	}
 
 	protected FaroResultsDisplay<IndividualSegment> search(
 			long groupId, String channelId, String contactsEntityId,
 			int contactsEntityType, String dataSourceId, String query,
-			String segmentType, String state, int cur, int delta,
+			List<String> segmentTypes, String state, int cur, int delta,
 			List<OrderByField> orderByFields)
 		throws Exception {
 
@@ -446,7 +335,7 @@ public class IndividualSegmentController extends BaseFaroController {
 		if (Validator.isNull(contactsEntityId)) {
 			results = contactsEngineClient.getIndividualSegments(
 				faroProject, channelId, dataSourceId, query,
-				Collections.singletonList("name"), null, segmentType, state,
+				List.of("authorName", "name"), null, segmentTypes, state,
 				IndividualSegment.Status.ACTIVE.name(), cur, delta,
 				orderByFields);
 		}
@@ -471,7 +360,7 @@ public class IndividualSegmentController extends BaseFaroController {
 		return new FaroResultsDisplay<>();
 	}
 
-	protected IndividualSegmentDisplay updateDynamic(
+	protected IndividualSegmentDisplay updateIndividualSegment(
 			long groupId, IndividualSegment individualSegment, String filter,
 			boolean includeAnonymousUsers, String name)
 		throws Exception {
@@ -549,11 +438,7 @@ public class IndividualSegmentController extends BaseFaroController {
 			throw new FaroException("Invalid channel ID: " + channelId);
 		}
 
-		if (!segmentType.equals(IndividualSegment.Type.STATIC.name()) &&
-			!segmentType.equals(IndividualSegment.Type.DYNAMIC.name())) {
-
-			throw new FaroException("Invalid segment type: " + segmentType);
-		}
+		validateType(segmentType);
 	}
 
 	protected void validateStatus(String status) {
@@ -563,21 +448,17 @@ public class IndividualSegmentController extends BaseFaroController {
 		}
 	}
 
-	protected void validateUpdate(IndividualSegment individualSegment) {
-		validateStatus(individualSegment.getStatus());
+	protected void validateType(String segmentType) {
+		if (!segmentType.equals(IndividualSegment.Type.BATCH.name()) &&
+			!segmentType.equals(IndividualSegment.Type.REAL_TIME.name())) {
+
+			throw new FaroException("Invalid segment type: " + segmentType);
+		}
 	}
 
-	protected void validateUpdateMemberships(
-		IndividualSegment individualSegment) {
-
-		String segmentType = individualSegment.getSegmentType();
-
-		if (!segmentType.equals(IndividualSegment.Type.STATIC.name())) {
-			throw new FaroException(
-				"You cannot modify memberships of type: " + segmentType);
-		}
-
+	protected void validateUpdate(IndividualSegment individualSegment) {
 		validateStatus(individualSegment.getStatus());
+		validateType(individualSegment.getSegmentType());
 	}
 
 	private static final int[] _ENTITY_TYPES = {
